@@ -39,6 +39,8 @@
 	$v2_description 			= string_display( $v2_description );
 	$v2_steps_to_reproduce 		= string_display( $v2_steps_to_reproduce );
 	$v2_additional_information 	= string_display( $v2_additional_information );
+	
+	start_compression();
 ?>
 <?php print_page_top1() ?>
 <?php print_page_top2() ?>
@@ -446,3 +448,4 @@
 	}
 ?>
 <?php print_page_bot1( __FILE__ ) ?>
+<?php stop_compression(); ?>
