@@ -56,6 +56,7 @@ Mantis
  * Added support for private bugnotes.
  * Enhanced the admin_upgrade.php script, and supported auto-generation of SQL files.
  * In the view bugs, when all projects is selected the project name is now displayed in smaller font over the category.
+ * Added support for optional compression of html output ($g_compress_html).  This option is OFF by default since it requires PHP 4.04.
 
 2002.05.19  -  0.17.3
 
